--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -3,9 +3,7 @@
     <gradient
         android:angle="135"
         android:centerColor="#4CAF50"
-
-        android:endColor="#005050"
-        android:startColor="#00E0E0"
-
+        android:endColor="#2E7D32"
+        android:startColor="#81C784"
         android:type="linear" />
 </shape>
