--- a/app/src/main/res/layout/app_bar_driver_profile.xml
+++ b/app/src/main/res/layout/app_bar_driver_profile.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context="com.example.ktvr.ktvr_team45.DriverProfile">
 
     <android.support.design.widget.AppBarLayout
@@ -15,13 +14,13 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
+            android:background="#97989a"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_driver_profile" />
+    <include layout="@layout/content_driver_profile2" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
