--- a/app/src/main/res/layout/activity_bus_code.xml
+++ b/app/src/main/res/layout/activity_bus_code.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:background="@drawable/my_back"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.ktvr.ktvr_team45.BusCodeActivity">
