--- a/app/src/main/res/layout/activity_shift_in_progress.xml
+++ b/app/src/main/res/layout/activity_shift_in_progress.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/my_back"
     tools:context="com.example.ktvr.ktvr_team45.ShiftInProgressActivity">
     <TextView
         android:text="Shift Started at:"
@@ -48,7 +49,7 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:text="14:50"
+        android:text="9:25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView7"
