--- a/app/src/main/res/layout/nav_header_driver_profile.xml
+++ b/app/src/main/res/layout/nav_header_driver_profile.xml
@@ -23,8 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:textSize="25dp"
         android:text="KTVR"
-        android:textColor="@color/colorPrimary"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
