--- a/app/src/main/res/menu/activity_driver_profile_drawer.xml
+++ b/app/src/main/res/menu/activity_driver_profile_drawer.xml
@@ -1,35 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_BusCode"
-            android:icon="@android:drawable/ic_dialog_dialer"
-            android:title="Enter Bus Code" />
-        <item
             android:id="@+id/nav_Grievances"
-            android:icon="?android:attr/actionModePasteDrawable"
+            android:icon="@drawable/ic_menu_camera"
             android:title="View Grievances" />
         <item
+            android:id="@+id/nav_BusCode"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Enter Bus Code" />
+        <item
             android:id="@+id/nav_Scan"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Scan Code" />
-
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="Scan QR Code" />
 
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+
 
 </menu>
